objects/Knowledge__kav/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <description>Answer for Frequently Asked Questions</description>
    <label>Answer</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>