objects/Knowledge__kav/fields/ArticlePurpose__c.field-meta.xml
<CustomField>
    <fullName>ArticlePurpose__c</fullName>
    <label>Article Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal and External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>