objects/Knowledge__kav/fields/ArticleSource__c.field-meta.xml
<CustomField>
    <fullName>ArticleSource__c</fullName>
    <label>Article Source</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>