objects/Knowledge__kav/fields/SubmissionCode__c.field-meta.xml
<CustomField>
    <fullName>SubmissionCode__c</fullName>
    <label>Submission Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>