objects/Knowledge__kav/recordTypes/FrequentlyAskedQuestions.recordType-meta.xml
<RecordType>
    <fullName>FrequentlyAskedQuestions</fullName>
    <active>true</active>
    <label>Frequently Asked Questions (FAQs)</label>
</RecordType>