objects/Knowledge__kav/recordTypes/GeneralArticle.recordType-meta.xml
<RecordType>
    <fullName>GeneralArticle</fullName>
    <active>true</active>
    <label>General Article</label>
</RecordType>