objects/Knowledge__kav/validationRules/QuestionAndAnswerRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>QuestionAndAnswerRequired</fullName>
    <active>true</active>
    <description>Validation rule that makes question and answer required when creating an article with FAQs record type</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;FrequentlyAskedQuestions&quot; , OR( LEN( Question__c  )=0 , LEN(Answer__c) = 0   ) )</errorConditionFormula>
    <errorMessage>Please fill Question and or Answer field</errorMessage>
</ValidationRule>