objects/Knowledge__kav/validationRules/SummaryRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>SummaryRequired</fullName>
    <active>true</active>
    <description>Validation rule that makes summary required when creating an article with General Article record type</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;GeneralArticle&quot; ,  ISBLANK( Summary ) )</errorConditionFormula>
    <errorMessage>Please fill Summary field</errorMessage>
</ValidationRule>