objects/Knowledge__kav/listViews/archived_articles.listView-meta.xml
<ListView>
    <fullName>archived_articles</fullName>
    <columns>TITLE</columns>
    <columns>ABSTRACT</columns>
    <columns>ARTICLE_NUMBER</columns>
    <columns>PUBLISH_STATUS</columns>
    <columns>ArticleSource__c</columns>
    <columns>ArticlePurpose__c</columns>
    <columns>SubmissionCode__c</columns>
    <columns>ARCHIVED_DATE</columns>
    <columns>ARCHIVEDBY_USER</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PUBLISH_STATUS</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>LANGUAGE</field>
        <operation>equals</operation>
        <value>en_US</value>
    </filters>
    <label>Archived Articles</label>
</ListView>